--- a/style.css
+++ b/style.css
@@ -1,93 +1,55 @@
-body {
-    background: #CCCCCC
-}
-
-p {
-    text-align: center;
-}
-
-em strong {
-    color: #FF0000;
-}
-body {
-    background: #CCCCCC
+body{
+	
 }
 
 #banner {
-    width: 100%;
+	width: 100%;
 }
 
-h1 {
-    text-align: center
-}
-
-p {
-    text-align: center;
-}
-
-#missao {
-    font-size: 20px
-}
-
-em strong {
-    color: #FF0000;
-}
-
-body {
-
-}
-
-.principal{
-    background: #CCCCCC;
-    padding: 30px;
-}
-
-.itens {
-    font-style: italic;
-}
-
-.beneficios {
-    background: #FFFFFF;
-    padding: 20px;
-}
-
-h2 {
-    text-align: center;
-}ul {
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
-}
-
-.imagembeneficios {
-    width: 50%;
+.principal {
+	background: #CCCCCC;
+	padding: 30px;
 }
 
 .titulo-principal {
-    padding-left: 20px;
+	padding-left: 20px;
 }
 
 .titulo-centralizado {
-    text-align: center
+	text-align: center;
 }
 
+p {
+   	text-align: center;
+}
 
+#missao {
+	font-size: 20px;
+}
 
+em strong{
+	color: #ff0000;
+}
 
+.itens {
+	font-style: italic;
+}
 
+.beneficios {
+	background: #ffffff;
+	padding: 20px;
+}
 
+ul{
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
+}
 
-
-
-
-
-
-
-
-
-
-
+.imagembeneficios {
+	width: 50%;
+}
 
 
 
